# libtetris

./: CMakeLists.txt  bot-wasm.cpp  main.cpp  main2.cpp  test.html
include/: Fumen.hpp  TetrisConfig.hpp.in
include/bot/: Analysis.hpp  MoveGen.hpp
include/core/: Randomizers.hpp  TerminalColors.hpp  Tetris.hpp
include/util/: Fumen.hpp
src/: CMakeLists.txt
src/bot/: Analysis.cpp  MoveGen.cpp
src/core/: Tetris.cpp
src/util/: Fumen.cpp
test/: CMakeLists.txt
test/Bot/MoveGen/: EmptyI.cpp  EmptyII.cpp  EmptyJ.cpp  EmptyL.cpp  EmptyO.cpp  EmptyS.cpp  EmptyT.cpp  EmptyZ.cpp  PCS.cpp
test/Fumen/: FirstPage.cpp  IPiece.cpp  JPiece.cpp  LPiece.cpp  OPiece.cpp  PC.cpp  SPiece.cpp  TPiece.cpp  ZPiece.cpp
test/SRS/: TSpin.cpp  TwistL.cpp  TwistS.cpp
