add_executable( SRSTwistS SRS/TwistS.cpp )
add_test(        SRSTwistS SRSTwistS    )

add_executable( SRSTwistL SRS/TwistL.cpp )
add_test(        SRSTwistL SRSTwistL    )

add_executable( SRSTSpin SRS/TSpin.cpp )
add_test(        SRSTSpin SRSTSpin    )

add_executable( MoveGenEmptyI Bot/MoveGen/EmptyI.cpp )
add_test(        MoveGenEmptyI MoveGenEmptyI    )
add_executable( MoveGenEmptyII Bot/MoveGen/EmptyII.cpp )
add_test(        MoveGenEmptyII MoveGenEmptyII    )
add_executable( MoveGenEmptyJ Bot/MoveGen/EmptyJ.cpp )
add_test(        MoveGenEmptyJ MoveGenEmptyJ    )
add_executable( MoveGenEmptyL Bot/MoveGen/EmptyL.cpp )
add_test(        MoveGenEmptyL MoveGenEmptyL    )
add_executable( MoveGenEmptyO Bot/MoveGen/EmptyO.cpp )
add_test(        MoveGenEmptyO MoveGenEmptyO    )
add_executable( MoveGenEmptyT Bot/MoveGen/EmptyT.cpp )
add_test(        MoveGenEmptyT MoveGenEmptyT    )
add_executable( MoveGenEmptyS Bot/MoveGen/EmptyS.cpp )
add_test(        MoveGenEmptyS MoveGenEmptyS    )
add_executable( MoveGenEmptyZ Bot/MoveGen/EmptyZ.cpp )
add_test(        MoveGenEmptyZ MoveGenEmptyZ    )
add_executable( MoveGenPCS Bot/MoveGen/PCS.cpp )
add_test(        MoveGenPCS MoveGenPCS    )
add_executable( MoveGenIOverhang Bot/MoveGen/IOverhang.cpp )
add_test(        MoveGenIOverhang MoveGenIOverhang    )

add_executable( FumenFirstPage Fumen/FirstPage.cpp )
add_test(        FumenFirstPage FumenFirstPage  )
add_executable( FumenIPiece Fumen/IPiece.cpp )
add_test(        FumenIPiece FumenIPiece  )
add_executable( FumenLPiece Fumen/LPiece.cpp )
add_test(        FumenLPiece FumenLPiece  )
add_executable( FumenJPiece Fumen/JPiece.cpp )
add_test(        FumenJPiece FumenJPiece  )
add_executable( FumenOPiece Fumen/OPiece.cpp )
add_test(        FumenOPiece FumenOPiece  )
add_executable( FumenSPiece Fumen/SPiece.cpp )
add_test(        FumenSPiece FumenSPiece  )
add_executable( FumenTPiece Fumen/TPiece.cpp )
add_test(        FumenTPiece FumenTPiece  )
add_executable( FumenZPiece Fumen/ZPiece.cpp )
add_test(        FumenZPiece FumenZPiece  )

add_executable( FumenPC Fumen/PC.cpp )
add_test(        FumenPC FumenPC  )

target_link_libraries(SRSTwistS LINK_PUBLIC libtetris)
target_link_libraries(SRSTwistL LINK_PUBLIC libtetris)
target_link_libraries(SRSTSpin LINK_PUBLIC libtetris)
target_link_libraries(MoveGenEmptyI LINK_PUBLIC libtetris bot)
target_link_libraries(MoveGenEmptyII LINK_PUBLIC libtetris bot)
target_link_libraries(MoveGenEmptyJ LINK_PUBLIC libtetris bot)
target_link_libraries(MoveGenEmptyL LINK_PUBLIC libtetris bot)
target_link_libraries(MoveGenEmptyO LINK_PUBLIC libtetris bot)
target_link_libraries(MoveGenEmptyT LINK_PUBLIC libtetris bot)
target_link_libraries(MoveGenEmptyS LINK_PUBLIC libtetris bot)
target_link_libraries(MoveGenEmptyZ LINK_PUBLIC libtetris bot)
target_link_libraries(MoveGenPCS LINK_PUBLIC libtetris bot)
target_link_libraries(MoveGenIOverhang LINK_PUBLIC libtetris bot)
target_link_libraries(FumenFirstPage LINK_PUBLIC libtetris)
target_link_libraries(FumenIPiece LINK_PUBLIC libtetris)
target_link_libraries(FumenLPiece LINK_PUBLIC libtetris)
target_link_libraries(FumenJPiece LINK_PUBLIC libtetris)
target_link_libraries(FumenOPiece LINK_PUBLIC libtetris)
target_link_libraries(FumenSPiece LINK_PUBLIC libtetris)
target_link_libraries(FumenTPiece LINK_PUBLIC libtetris)
target_link_libraries(FumenZPiece LINK_PUBLIC libtetris)
target_link_libraries(FumenPC LINK_PUBLIC libtetris)
